examples/test/testpolicy1970.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1970
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key1: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value18
          key1: value43
          key42: value25
      podSelector:
        matchLabels:
          key38: value11
          key47: value5
